--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
 <body>
     <section id="front">
-        <nav class="nav-main container">
+        <nav class="nav-main">
             <div class="nav-left">
                 Green Store
             </div>
             <div class="nav-right">
-                <a href="./index.html" class="nav-link">Home</a>
-                <a href="" class="nav-link">Plants</a>
-                <a href="" class="nav-link">About</a>
-                <a href="" class="nav-link">Contact</a>
+                <a href="./index.html" class="nav-link mobile-hide">Home</a>
+                <a href="" class="nav-link mobile-hide">Plants</a>
+                <a href="" class="nav-link mobile-hide">About</a>
+                <a href="" class="nav-link mobile-hide">Contact</a>
                 <a href="" class="nav-link cart"><img src="./assets/icons/cart.svg" alt="Cart"></a>
                 <a href="" class="nav-link burger"><img src="./assets/icons/burger-menu.svg" alt="Menu"></a>
             </div>
@@ -47,35 +47,35 @@
                         <p class="plant-price">$124.90</p>
                     </div>
                 </div>
-                <div class="plant-card">
+                <div class="plant-card mobile-hide">
                     <img class="plant-image" src="./assets/plants/plant-2.png" alt="">
                     <div class="plant-description">
                         <h4 class="plant-name">Zz Plants</h4>
                         <p class="plant-price">$129.90</p>
                     </div>
                 </div>
-                <div class="plant-card">
+                <div class="plant-card mobile-hide">
                     <img class="plant-image" src="./assets/plants/plant-3.png" alt="">
                     <div class="plant-description">
                         <h4 class="plant-name">Calarhea Beauty Star</h4>
                         <p class="plant-price">$79.90</p>
                     </div>
                 </div>
-                <div class="plant-card">
+                <div class="plant-card mobile-hide">
                     <img class="plant-image" src="./assets/plants/plant-4.png" alt="">
                     <div class="plant-description">
                         <h4 class="plant-name">Birdnest Japanes</h4>
                         <p class="plant-price">$89.90</p>
                     </div>
                 </div>
-                <div class="plant-card">
+                <div class="plant-card mobile-hide">
                     <img class="plant-image" src="./assets/plants/plant-5.png" alt="">
                     <div class="plant-description">
                         <h4 class="plant-name">Hoya Obovatum</h4>
                         <p class="plant-price">$184.90</p>
                     </div>
                 </div>
-                <div class="plant-card">
+                <div class="plant-card mobile-hide">
                     <img class="plant-image" src="./assets/plants/plant-6.png" alt="">
                     <div class="plant-description">
                         <h4 class="plant-name">Monstera Deliciosa</h4>
@@ -88,7 +88,7 @@
     </section>
     <section id="our-story" class="container">
         <div class="box our-story-section">
-            <img class="our-story-banner" src="./assets/banners/our-story.png" alt="">
+            <img class="our-story-banner mobile-hide" src="./assets/banners/our-story.png" alt="">
             <div class="our-story-info">
                 <div class="our-story-head">
                     <h3>OUR STORY</h3>
@@ -120,14 +120,14 @@
                     <img class="feedback-photo" src="./assets/customers/customer-1.png" alt="">
                     <div class="feedback-name">JENNIFER LEWIS</div>
                 </div>
-                <div class="feedback-card">
+                <div class="feedback-card mobile-hide">
                     <div class="feedback-section-comma">‘‘</div>
                     <div class="feedback-text">Sed odio donec curabitur auctor amet Sed odio donec curabitur auctor amet
                         amet morbi egestas hendrerit.</div>
                     <img class="feedback-photo" src="./assets/customers/customer-2.png" alt="">
                     <div class="feedback-name">ALICIA HEART</div>
                 </div>
-                <div class="feedback-card">
+                <div class="feedback-card mobile-hide">
                     <div class="feedback-section-comma">‘‘</div>
                     <div class="feedback-text">Sed odio donec curabitur auctor amet Sed odio donec curabitur auctor amet
                         amet morbi egestas hendrerit.</div>
