new plants cards js

--- a/index.html
+++ b/index.html
@@ -39,50 +39,7 @@
     <section id="new-plants" class="container">
         <div class="box new-plants-section">
             <h3 class="section-title">New Plants</h3>
-            <div class="plants-group">
-                <div class="plant-card">
-                    <img class="plant-image" src="./assets/plants/plant-1.png" alt="">
-                    <div class="plant-description">
-                        <h4 class="plant-name">Bird of Paradise</h4>
-                        <p class="plant-price">$124.90</p>
-                    </div>
-                </div>
-                <div class="plant-card mobile-hide">
-                    <img class="plant-image" src="./assets/plants/plant-2.png" alt="">
-                    <div class="plant-description">
-                        <h4 class="plant-name">Zz Plants</h4>
-                        <p class="plant-price">$129.90</p>
-                    </div>
-                </div>
-                <div class="plant-card mobile-hide">
-                    <img class="plant-image" src="./assets/plants/plant-3.png" alt="">
-                    <div class="plant-description">
-                        <h4 class="plant-name">Calarhea Beauty Star</h4>
-                        <p class="plant-price">$79.90</p>
-                    </div>
-                </div>
-                <div class="plant-card mobile-hide">
-                    <img class="plant-image" src="./assets/plants/plant-4.png" alt="">
-                    <div class="plant-description">
-                        <h4 class="plant-name">Birdnest Japanes</h4>
-                        <p class="plant-price">$89.90</p>
-                    </div>
-                </div>
-                <div class="plant-card mobile-hide">
-                    <img class="plant-image" src="./assets/plants/plant-5.png" alt="">
-                    <div class="plant-description">
-                        <h4 class="plant-name">Hoya Obovatum</h4>
-                        <p class="plant-price">$184.90</p>
-                    </div>
-                </div>
-                <div class="plant-card mobile-hide">
-                    <img class="plant-image" src="./assets/plants/plant-6.png" alt="">
-                    <div class="plant-description">
-                        <h4 class="plant-name">Monstera Deliciosa</h4>
-                        <p class="plant-price">$224.90</p>
-                    </div>
-                </div>
-            </div>
+            <div class="plants-group"></div>
             <button type="button" class="green button wide">Shop Now</button>
         </div>
     </section>
@@ -263,15 +220,6 @@
                         </div>
                     </div>
                     <div class="footer-links-column">
-                        <h4>Pages</h4>
-                        <div class="links-group">
-                            <a herf="">Home</a>
-                            <a herf="">About</a>
-                            <a herf="">Service</a>
-                            <a herf="">Features</a>
-                        </div>
-                    </div>
-                    <div class="footer-links-column">
                         <h4>Contact us</h4>
                         <div class="links-group">
                             <p>123 Demo st. India <br>Bihar 84020</p>
@@ -302,6 +250,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="./scripts/newPlantsCards.js"></script>
 </body>
 
 </html>
