feedback cards js

--- a/index.html
+++ b/index.html
@@ -69,29 +69,7 @@
                 <h3 class="section-title">What Our Customer Say</h3>
                 <hr>
             </div>
-            <div class="feedback-cards-group">
-                <div class="feedback-card">
-                    <div class="feedback-section-comma">‘‘</div>
-                    <div class="feedback-text">Sed odio donec curabitur auctor amet Sed odio donec curabitur auctor amet
-                        amet morbi egestas hendrerit.</div>
-                    <img class="feedback-photo" src="./assets/customers/customer-1.png" alt="">
-                    <div class="feedback-name">JENNIFER LEWIS</div>
-                </div>
-                <div class="feedback-card mobile-hide">
-                    <div class="feedback-section-comma">‘‘</div>
-                    <div class="feedback-text">Sed odio donec curabitur auctor amet Sed odio donec curabitur auctor amet
-                        amet morbi egestas hendrerit.</div>
-                    <img class="feedback-photo" src="./assets/customers/customer-2.png" alt="">
-                    <div class="feedback-name">ALICIA HEART</div>
-                </div>
-                <div class="feedback-card mobile-hide">
-                    <div class="feedback-section-comma">‘‘</div>
-                    <div class="feedback-text">Sed odio donec curabitur auctor amet Sed odio donec curabitur auctor amet
-                        amet morbi egestas hendrerit.</div>
-                    <img class="feedback-photo" src="./assets/customers/customer-3.png" alt="">
-                    <div class="feedback-name">JUAN CARLOS</div>
-                </div>
-            </div>
+            <div class="feedback-cards-group"></div>
         </div>
     </section>
     <section id="gift-cards">
@@ -252,6 +230,7 @@
     </footer>
 
     <script src="./scripts/newPlantsCards.js"></script>
+    <script src="./scripts/feedbackCards.js"></script>
 </body>
 
 </html>
